Modified parent topics HTML to include links to child topic

--- a/learning_logs/templates/learning_logs/topics.html
+++ b/learning_logs/templates/learning_logs/topics.html
@@ -5,7 +5,11 @@
 <p>Topics</p>
 <ul>
     {% for topic in topics %}
-    <li>{{ topic.text }}"></li>
+    <li>
+        <a href="{% url 'learning_log: topic' topic.id %}">
+            {{ topic.text }}</a>
+    </li>
+    </li>
     {% empty %}
     <li>No topics have been added yet.</li>
     {% endfor %}
