--- a/learning_logs/templates/learning_logs/topics.html
+++ b/learning_logs/templates/learning_logs/topics.html
@@ -6,7 +6,7 @@
 <ul>
     {% for topic in topics %}
     <li>
-        <a href="{% url 'learning_log: topic' topic.id %}">
+        <a href="{% url 'learning_logs:topic' topic.id %}">
             {{ topic.text }}</a>
     </li>
     </li>
